Created Applett to run Code to host